# teledigest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  docker-compose.yml  env-example  example.conf  pyproject.toml  requirements.txt  telegram_digest_bot.py
.github/workflows/: ci.yml  commit-check.yml  markdown.yml
scripts/: ci-check
src/teledigest/: __init__.py  bot_menu.py  config.py  db.py  llm.py  main.py  message_utils.py  scheduler.py  sources_db.py  telegram_client.py  telegraph.py  text_sanitize.py
tests/: test_config.py  test_db.py  test_llm.py  test_main.py  test_message_utils.py  test_scheduler.py  test_telegram_client.py  test_telegraph.py  test_text_sanitize.py
